# ETA-pred-IITG

./: .gitignore  Baseline_model_EDA.ipynb  README.md  baseline_eta_model - Copy.ipynb  bottleneck_and_corridor_audit.ipynb  etagraph.ipynb  hub-features.ipynb  hub_features_final.ipynb  hub_features_finalfinal.ipynb  main.py  model_comparison.html  pyproject.toml  requirements.txt
dataset/: .~lock.cleaned_data.csv#  .~lock.final_normalized_test_graph.csv#  .~lock.raw_data.csv#  cleaned_data.csv  final_normalized_graph.csv  final_normalized_test_graph.csv  fitted_scaler.pkl  hub-features.csv  merged_train_graph.csv  node_mapping.pkl  osrm_graph.pkl  osrm_merged_graph_data.csv  test_data.csv  train_data.csv
final_model/: delhivery_gnn_weights.pth
src/data_handling/: data_cleaning.ipynb  get_initial_insights.ipynb  hub_features_final.ipynb  hubs.json  merged_data_for_osrm_graph.ipynb  osrm_graph_gen.ipynb
src/interface/: helper.py  interface.py  osrm_path_gen.py  runner.py
src/model/: Baseline_model_EDA.ipynb  GNN_training.ipynb
